--- a/config_example.json
+++ b/config_example.json
@@ -261,6 +261,81 @@
   ]
  },
  "exchanges": [
+ {
+    "name": "ApexPro",
+    "enabled": true,
+    "verbose": false,
+    "httpTimeout": 15000000000,
+    "websocketResponseCheckTimeout": 30000000,
+    "websocketResponseMaxLimit": 7000000000,
+    "websocketTrafficTimeout": 30000000000,
+    "websocketOrderbookBufferLimit": 5,
+    "baseCurrencies": "USD,GBP,EUR",
+    "currencyPairs": {
+        "requestFormat": {
+        "uppercase": true,
+        "delimiter": "-"
+        },
+        "configFormat": {
+        "uppercase": true,
+        "delimiter": "-"
+        },
+        "useGlobalFormat": true,
+        "assetTypes": [
+        "spot"
+        ],
+        "pairs": {}
+    },
+    "api": {
+        "authenticatedSupport": true,
+        "authenticatedWebsocketApiSupport": true,
+        "endpoints": {
+        "url": "https://pro.apex.exchange/api/",
+        "urlSecondary": "NON_DEFAULT_HTTP_LINK_TO_EXCHANGE_API",
+        "websocketURL": "NON_DEFAULT_HTTP_LINK_TO_WEBSOCKET_EXCHANGE_API"
+        },
+        "credentials": {
+        "key": "Key",
+        "secret": "Secret",
+        "clientID": "ClientID"
+        },
+        "credentialsValidator": {
+        "requiresKey": true,
+        "requiresSecret": true,
+        "requiresClientID": true,
+        "requiresBase64DecodeSecret": true
+        }
+    },
+    "features": {
+        "supports": {
+        "restAPI": true,
+        "restCapabilities": {
+        "autoPairUpdates": true
+        },
+        "websocketAPI": true,
+        "websocketCapabilities": {}
+        },
+        "enabled": {
+        "autoPairUpdates": true,
+        "websocketAPI": false
+        }
+    },
+    "bankAccounts": [
+        {
+        "enabled": false,
+        "bankName": "",
+        "bankAddress": "",
+        "bankPostalCode": "",
+        "bankPostalCity": "",
+        "bankCountry": "",
+        "accountName": "",
+        "accountNumber": "",
+        "swiftCode": "",
+        "iban": "",
+        "supportedCurrencies": ""
+        }
+    ]
+  },
   {
    "name": "BTC Markets",
    "enabled": true,
