Updating pairs configuration and adding public websocket connection configuration

--- a/config_example.json
+++ b/config_example.json
@@ -274,7 +274,7 @@
     "currencyPairs": {
         "requestFormat": {
         "uppercase": true,
-        "delimiter": "-"
+        "delimiter": ""
         },
         "configFormat": {
         "uppercase": true,
@@ -282,7 +282,7 @@
         },
         "useGlobalFormat": true,
         "assetTypes": [
-        "spot"
+        "futures"
         ],
         "pairs": {}
     },
